--- a/.github/workflows/MyAction.yml
+++ b/.github/workflows/MyAction.yml
@@ -1,11 +1,12 @@
 name: CI
 
-on: [push, workflow_dispatch]
+on: workflow_dispatch
 
 jobs:
   build:
 
     runs-on: windows-latest
+    timeout-minutes: 9999
 
     steps:
     - name: Download
